[metadata]
name = miscutilities
version = attr:miscutil.__version__
author = 'Koji Yamamoto'
author_email = 'kouji@acm.org'
description = Miscelaneous utilities library.
long_description = file:Readme.md

[options]
zip_safe = False
packages = find:
install_requires =
  PyYAML
  numpy

[options.package_data]
miscutil =
  py.typed
  __init__.pyi
  colour.pyi
  docker.pyi
  files.pyi
  number.pyi
  reflection.pyi
  subprocess.pyi
  yamljson.pyi
